--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8000
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-resilience4j.retry.instances.sample-api.maxRetryAttempts=5
+resilience4j.retry.instances.sample-api.maxAttempts=5
 resilience4j.retry.instances.sample-api.waitDuration=1s
 resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
 
@@ -17,3 +17,7 @@ resilience4j.ratelimiter.instances.default.limitRefreshPeriod=10s
 
 resilience4j.bulkhead.instances.default.maxConcurrentCalls=10
 resilience4j.bulkhead.instances.sample-api.maxConcurrentCalls=10
+
+spring.sleuth.sampler.probability=1.0
+
+##spring.zipkin.baseUrl=http://localhost:9411/
